[package]
name = "beatblox_midi"
version = "0.2.1"
authors = ["Gabriel H. Barnard <gabriel.h.barnard@vanderbilt.edu>"]
edition ="2021"
description = "This crate help with parsing data from .mid files and returns a format compatible with netsblox."
license-file = "license.txt"
repository = "https://github.com/gb0808/beatblox_midi"

[dependencies]
midly = "0.5.3"
num-traits = "0.2"